# libaochat

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.win32  README  TODO  aochat.def  aochat.h  autoconf.h.in  autogen.sh  configure  configure.in  connect.c  event.c  keyex.c  list.c  misc.c  msg_queue.c  packet.c  send_queue.c  timer.c  win32autoconf.h  win32compat.h  win32gendef.sh
docs/: BUILD_README  aochat.css  aochat.html  group_id.txt
examples/1_charlist/: Makefile  Makefile.win32  README  main.c
examples/2_echobot/: Makefile  Makefile.win32  README  main.c
examples/3_skeleton/: main.c
examples/windows_polling/: README  main.c
